add grape cli